if(NOT Xyce_PARALLEL_MPI)
     add_subdirectory(CircuitPKG)
endif()

if (Xyce_REGRESSION AND DEFINED Xyce_REGRESSION_DIR AND EXISTS "${Xyce_REGRESSION_DIR}/CMakeLists.txt")
     # Need to set up expected symlinks in test directories if they are not there already 
     if (NOT EXISTS "${Xyce_REGRESSION_DIR}/Netlists/SandiaTests" AND EXISTS "${Xyce_REGRESSION_DIR}/../Xyce_SandiaRegression/Netlists/CMakeLists.txt" )
       file(REAL_PATH "${Xyce_REGRESSION_DIR}/../Xyce_SandiaRegression/Netlists" netlistDIR)
       file(CREATE_LINK ${netlistDIR} "${Xyce_REGRESSION_DIR}/Netlists/SandiaTests" SYMBOLIC)
       if (NOT EXISTS "${Xyce_REGRESSION_DIR}/OutputData/SandiaTests" AND EXISTS "${Xyce_REGRESSION_DIR}/../Xyce_SandiaRegression/OutputData" )
         file(REAL_PATH "${Xyce_REGRESSION_DIR}/../Xyce_SandiaRegression/OutputData" dataDIR)
         file(CREATE_LINK ${dataDIR} "${Xyce_REGRESSION_DIR}/OutputData/SandiaTests" SYMBOLIC)
       endif ()
     endif () 
     if (NOT EXISTS "${Xyce_REGRESSION_DIR}/Netlists/FastrackTests" AND EXISTS "${Xyce_REGRESSION_DIR}/../Xyce_FastrackRegression/Netlists/CMakeLists.txt" )
       file(REAL_PATH "${Xyce_REGRESSION_DIR}/../Xyce_FastrackRegression/Netlists" netlistDIR)
       file(CREATE_LINK ${netlistDIR} "${Xyce_REGRESSION_DIR}/Netlists/FastrackTests" SYMBOLIC)
       if (NOT EXISTS "${Xyce_REGRESSION_DIR}/OutputData/FastrackTests" AND EXISTS "${Xyce_REGRESSION_DIR}/../Xyce_FastrackRegression/OutputData" )
         file(REAL_PATH "${Xyce_REGRESSION_DIR}/../Xyce_FastrackRegression/OutputData" dataDIR)
         file(CREATE_LINK ${dataDIR} "${Xyce_REGRESSION_DIR}/OutputData/FastrackTests" SYMBOLIC)
       endif ()
     endif () 
     add_subdirectory (${Xyce_REGRESSION_DIR} ${CMAKE_CURRENT_BINARY_DIR}/Xyce_Regression)
endif ()
add_subdirectory(IOInterfacePKG)
add_subdirectory(UtilityPKG)
