
AM_CPPFLAGS = @Xyce_INCS@

noinst_LTLIBRARIES = libAnalysis.la

libAnalysis_la_SOURCES = \
  N_ANP_AC.C \
  N_ANP_AnalysisBase.C \
  N_ANP_AnalysisEvent.C \
  N_ANP_AnalysisManager.C \
  N_ANP_DCSweep.C \
  N_ANP_Dakota.C \
  N_ANP_EmbeddedSampling.C \
  N_ANP_HB.C \
  N_ANP_InnerLevelSolve.C \
  N_ANP_MOR.C \
  N_ANP_MPDE.C \
  N_ANP_MixedSignalManager.C \
  N_ANP_NOISE.C \
  N_ANP_Op.C \
  N_ANP_OpBuilders.C \
  N_ANP_OutputMgrAdapter.C \
  N_ANP_ROL.C \
  N_ANP_RegisterAnalysis.C \
  N_ANP_Report.C \
  N_ANP_SecondLevelManager.C \
  N_ANP_Step.C \
  N_ANP_Sampling.C \
  N_ANP_SweepParam.C \
  N_ANP_Transient.C \
  N_ANP_UQSupport.C \
  N_ANP_fwd.h \
  N_ANP_AC.h \
  N_ANP_AnalysisBase.h \
  N_ANP_AnalysisEvent.h \
  N_ANP_AnalysisManager.h \
  N_ANP_DCSweep.h \
  N_ANP_Dakota.h \
  N_ANP_EmbeddedSampling.h \
  N_ANP_Factory.h \
  N_ANP_HB.h \
  N_ANP_MOR.h \
  N_ANP_MPDE.h \
  N_ANP_MixedSignalManager.h \
  N_ANP_NOISE.h \
  N_ANP_NoiseData.h \
  N_ANP_Op.h \
  N_ANP_OpBuilders.h \
  N_ANP_OutputMgrAdapter.h \
  N_ANP_ROL.h \
  N_ANP_ROL_DC_Optimization.h \
  N_ANP_RegisterAnalysis.h \
  N_ANP_Report.h \
  N_ANP_SecondLevelManager.h \
  N_ANP_Step.h \
  N_ANP_Sampling.h \
  N_ANP_StepEvent.h \
  N_ANP_SweepParam.h \
  N_ANP_Transient.h \
  N_ANP_UQSupport.h 
