
AM_CPPFLAGS = @Xyce_INCS@

noinst_LTLIBRARIES = libCircuit.la

libCircuit_la_SOURCES = \
  N_CIR_Xyce.C \
  N_CIR_SecondLevelSimulator.C \
  N_CIR_MixedSignalSimulator.C \
  N_CIR_GenCouplingSimulator.C \
  N_CIR_Xygra.C \
  N_CIR_fwd.h \
  N_CIR_DeprecatedTypes.h \
  N_CIR_Xyce.h \
  N_CIR_SecondLevelSimulator.h \
  N_CIR_MixedSignalSimulator.h \
  N_CIR_GenCouplingSimulator.h \
  N_CIR_Xygra.h 
