
AM_CPPFLAGS = @Xyce_INCS@

noinst_LTLIBRARIES = libErrorHandling.la

libErrorHandling_la_SOURCES = \
  N_ERH_ErrorMgr.C \
  N_ERH_Message.C \
  N_ERH_Messenger.C \
  N_ERH_Progress.C \
  mpi_filebuf.h \
  null_streambuf.h \
  N_ERH_ErrorMgr.h \
  N_ERH_Message.h \
  N_ERH_Messenger.h \
  N_ERH_Progress.h \
  N_ERH_fwd.h

